# twelve-angry-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: agents.yaml  config.yaml
config/agents/: default.yaml  engineering.yaml  investment.yaml  life.yaml  product.yaml  startup.yaml
config/agents/presets/: investment.yaml  life.yaml
config/presets/: startup.yaml
docs/superpowers/plans/: 2026-04-11-twelve-angry-agents.md
docs/superpowers/specs/: 2026-04-11-twelve-angry-agents-design.md
examples/: food-truck-debate.md
tests/: test_cli.py  test_config.py  test_graph.py  test_memory.py  test_smoke.py  test_state.py
tests/nodes/: test_agent.py  test_consensus.py  test_moderator.py
twelve_angry_agents/: cli.py  config.py  graph.py  memory.py  state.py
twelve_angry_agents/nodes/: agent.py  consensus.py  moderator.py
