[project]
name = "twelve-angry-agents"
version = "0.1.0"
description = "Run your decisions through a jury of 12 AI minds before you commit."
license = {text = "CC-BY-NC-4.0"}
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-core>=0.3",
    "langchain-ollama>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
taa = "twelve_angry_agents.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
